# llama2-server-docker-gpu

./: .gitignore  README.md  pyproject.toml  run-server.sh
docker/: Dockerfile  build.sh
llama2_server/: cli.py  llama_client.py  main.py
scripts/: rhel7-install-nvidia-runtime.sh
